add partials - CRUD INDEX - SHOW

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,37 @@
+@use "./partials/_variables" as *;
 @import "~bootstrap/scss/bootstrap";
+
+.ms_shadow {
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.ms_table {
+    border-radius: 20px;
+
+    thead {
+        background-color: $primary-color;
+        color: white;
+    
+        th{
+            padding: 10px;
+        }
+    }
+
+    tbody {
+
+        tr {
+            border-bottom: 1px solid $primary-color ;
+        }
+    }
+}
+
+
+
+.ms_table {
+    width: 98%;
+    margin: 2%;
+}
+
+.ms_border {
+    border-radius: 20px;
+}
