add: font SCSS + HEADER

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,37 +1,104 @@
 @use "./partials/_variables" as *;
+@use "./partials/fonts" as *;
 @import "~bootstrap/scss/bootstrap";
 
-.ms_shadow {
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+// ALL
+* {
+    font-family: BlauerNue;
+    font-variant: normal;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.ms_table {
-    border-radius: 20px;
+// GENERAL
+h1 {
+    font-family: BlauerNue;
+    font-variant: normal;
+    font-weight: bolder;
+}
+a {
+    text-decoration: none;
+}
 
+// TABLES
+.ms_table {
+    border-radius: 0.5rem;
+    border-collapse: separate;
+    overflow: hidden;
+    border-spacing: 0;
+    width: 100%;
+    box-shadow: $shadow;
     thead {
         background-color: $primary-color;
         color: white;
-    
-        th{
+        th {
+            font-family: BlauerNue;
+            font-variant: normal;
+            font-weight: bolder;
             padding: 10px;
         }
     }
 
     tbody {
-
+        th {
+            padding: 1rem;
+            font-family: BlauerNue;
+            font-variant: normal;
+            font-weight: bolder;
+        }
         tr {
-            border-bottom: 1px solid $primary-color ;
+            border-bottom: 1px solid $primary-color;
+        }
+        td {
+            padding: 1rem;
         }
     }
 }
 
-
-
-.ms_table {
-    width: 98%;
-    margin: 2%;
+// BACKGROUND-COLOR
+.ms_backC_primary {
+    background-color: $primary-color !important;
 }
 
+.ms_backC_secondary {
+    background-color: $secondary-color  !important;
+}
+
+// COLOR-TEXT
+.ms_t-white {
+    color: white;
+}
+
+.ms_t-black {
+    color: #212529;
+}
+
+
+// BUTTONS
+.ms_button {
+    background-color: $secondary-color;
+    padding: 0.5rem 1rem;
+    color: white;
+    border-radius: 0.5rem;
+    box-shadow: $shadow2;
+}
+
+// SHADOW
+.ms_shadow {
+    box-shadow: $shadow;
+}
+.ms_shadow2 {
+    box-shadow: $shadow2;
+}
+
+// BORDER
 .ms_border {
-    border-radius: 20px;
+    border-radius: 1.5rem;
 }
+
+.ms_border_inner {
+    border-radius: 0.5rem;
+}
+
