add: file queries.scss

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,6 @@
 @use "./partials/_variables" as *;
 @use "./partials/fonts" as *;
+@use "./partials/queries" as *;
 @import "~bootstrap/scss/bootstrap";
 
 // ALL
