--- a/resources/scss/partials/queries.scss
+++ b/resources/scss/partials/queries.scss
@@ -1,9 +1,13 @@
 
 
-@media screen and (min-width: 768px) {
-    
-    .d-flex {
-        display: block;
+@media screen and (max-width: 768px) {
+    .stats {
+        display: block ;
     }
+}
 
+@media screen and (max-width: 768px) {
+    .tabs {
+        display: none ;
+    }
 }
