--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -28,6 +28,14 @@
     width: 80%;
 }
 
+.container-outer {
+    width: 80%;
+}
+
+.container-inner {
+    width: 100%;
+}
+
 .stats {
     display: flex;
 }
