--- a/resources/scss/edit.scss
+++ b/resources/scss/edit.scss
@@ -1,4 +1,7 @@
 #suggestions {
+    position: relative !important;
+    top: 0;
+    left: 0;
     list-style-type: none;
     padding: 0;
     border: 1px solid #ccc;
@@ -6,11 +9,21 @@
     background-color: #fff;
     overflow-y: auto;
     z-index: 1000;
-}
-#suggestions li {
-    padding: 10px;
-    cursor: pointer;
-}
-#suggestions li:hover, #suggestions li.selected {
-    background-color: #f0f0f0;
+
+    li {
+        position: relative;
+        top:0;
+        left: 0;
+        padding: 10px;
+        z-index: 9999;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #f0f0f0;
+        }
+
+        &.selected{
+            background-color: #f0f0f0;
+        }
+    }
 }
