fix: many issues with Create and edit views

--- a/resources/scss/edit.scss
+++ b/resources/scss/edit.scss
@@ -33,3 +33,24 @@ form {
         }
     }
 }
+
+#search-bar {
+    position: relative !important;
+    top: 0;
+    left: 0;
+    margin-bottom: 35px;
+    border: 1px solid black;
+    input {
+        position: absolute;
+        top: 30px;
+        left: 0;
+    }
+}
+
+#search-btn {
+    position: absolute;
+    top: 31px;
+    right: 0;
+    // max-width: 20px;
+    font-size: 0.8rem;
+}
