--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -22,6 +22,15 @@
     }
 }
 
+//input
+.ms_input {
+    display: flex;
+    justify-content: space-around;
+    max-width: 100px;
+    font-weight: 400;
+    border: 1px solid $primary-color;
+    border-radius: 10px;
+}
 
 
 .container {
