--- a/resources/scss/create.scss
+++ b/resources/scss/create.scss
@@ -15,3 +15,33 @@
 
     aspect-ratio: 1;
 }
+
+#suggestions {
+    position: relative !important;
+    top: 0;
+    left: 0;
+    list-style-type: none;
+    padding: 0;
+    border: 1px solid #ccc;
+    position: absolute;
+    background-color: #fff;
+    overflow-y: auto;
+    z-index: 1000;
+
+    li {
+        position: relative;
+        top:0;
+        left: 0;
+        padding: 10px;
+        z-index: 9999;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #f0f0f0;
+        }
+
+        &.selected{
+            background-color: #f0f0f0;
+        }
+    }
+}
