--- a/resources/scss/edit.scss
+++ b/resources/scss/edit.scss
@@ -39,7 +39,7 @@ form {
     top: 0;
     left: 0;
     margin-bottom: 35px;
-    border: 1px solid black;
+    // border: 1px solid black;
     input {
         position: absolute;
         top: 30px;
