--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -20,6 +20,10 @@
         cursor: pointer;
         outline: inherit;
     }
+
+    ul {
+        list-style-type: none;
+    }
 }
 
 //input
@@ -101,18 +105,51 @@ a {
 }
 
 .sidebar_logo {
-    width: 70%;
+    width: 100%;
     max-height: 65px;
 }
 
-.nav-item-li {
-    width: 100% !important;
-    height: 40px !important;
-    border-radius: 0.5rem;
-    margin: 0.5rem;
-    box-shadow: $shadow2;
-    min-width: 100%;
+.sidebar_header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
+
+.icon_profile {
+    width: 20%;
+    border-radius: 50%;
+    border: 5px solid $primary-color;
+    max-width: 100px;
+}
+
+#header_sidebar {
+    ul {
+        li {
+            min-height: 80px;
+            background-color: $secondary-color;
+            padding: 0.5rem 1rem;
+            color: white;
+            border-radius: 0.5rem;
+            box-shadow: $shadow2;
+        }
+    }
+}
+
+#logout {
+    background-color: $secondary-color;
+    padding: 0.5rem 1rem;
+    color: white;
+    border-radius: 0.5rem;
+    box-shadow: $shadow2;
+    aspect-ratio: 1;
+
+}
+
+
+
+
 
 .ms_nav_item_logo {
     width: 100% !important;
@@ -127,11 +164,21 @@ a {
     width: 30px;
 }
 
+.spons {
+    min-width: 50px;
+    min-height: 50px;
+}
+
+.info {
+    min-width: 50px;
+    min-height: 50px;
+}
+
 nav {
     ul {
         li {
             // margin: 20px 0 0 0;
-            
+
 
             span {
                 font-size: 1rem;
@@ -142,16 +189,16 @@ nav {
 
 // SIDEBAR
 .sidebar_size {
-    min-width: 17%;
+    min-width: 20%;
 }
 
 .ms_navbar {
     height: 80px;
-    
+
 }
 
 .logo_blink {
-    height: 80px;
+    max-height: 80px;
     width: 100%;
 
 }
@@ -234,13 +281,25 @@ nav {
 .ms_backC_secondary_selected {
     background-color: $secondary-color !important;
     color: white;
-    padding: 20px; 
+    padding: 20px;
+}
+
+.filter_white {
+    filter: invert(100%) sepia(2%) saturate(310%) hue-rotate(342deg) brightness(118%) contrast(100%);
 }
 
 .ms_backC_tertiary {
     background-color: white !important;
 }
 
+.nav-item-li {
+    width: 100% !important;
+    height: 40px !important;
+    border-radius: 0.5rem;
+    margin: 0.5rem;
+    box-shadow: $shadow2;
+    min-width: 100%;
+}
 
 // COLOR-TEXT
 .ms_t-white {
@@ -258,10 +317,28 @@ nav {
 // BUTTONS
 .ms_button {
     background-color: $secondary-color;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     color: white;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
+}
+
+.ms_button_delete {
+    background-color: $secondary-color;
+    padding: 1rem;
+    color: white;
+    border-radius: 0.5rem;
+    box-shadow: $shadow2;
+}
+
+.ms_button_info {
+    background-color: $primary-color;
+    padding: 1rem;
+    color: white;
+    border-radius: 0.5rem;
+    box-shadow: $shadow2;
+    max-width: 50px;
+    max-height: 50px;
 }
 
 .ms_button_login {
@@ -276,7 +353,7 @@ nav {
 .ms_button_secondary {
     border: 1px solid $primary-color;
     background-color: none;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     color: $primary-color;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
@@ -303,6 +380,8 @@ nav {
 .ms_border_inner {
     border-radius: 0.5rem;
 }
+
+// -------------------------------------
 
 @import "./partials/queries";
 
