--- a/resources/scss/partials/queries.scss
+++ b/resources/scss/partials/queries.scss
@@ -1,8 +1,74 @@
 
+@media screen and (max-width: 500px) {
+    .table_mex {
+        th:nth-child(1) {
+            display:none;
+        }
+
+        td:nth-child(1) {
+            display:none;
+        }
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .table_flats {
+        th:nth-child(1) {
+            display:none;
+        }
+
+        td:nth-child(2) {
+            display:none;
+        }
+    }
+}
 
 @media screen and (max-width: 768px) {
     .stats {
         display: block ;
+    }
+
+
+}
+
+@media screen and (max-width: 1200px) {
+
+    .table_mex {
+        th:nth-child(2) {
+            display:none;
+        }
+
+        td:nth-child(2) {
+            display:none;
+        }
+    }
+
+    .table_flats {
+
+        th:nth-child(2) {
+            display:none;
+        }
+
+        td:nth-child(3) {
+            display:none;
+        }
+        
+        th:nth-child(3) {
+            display:none;
+        }
+        
+        td:nth-child(4) {
+            display:none;
+        }
+        
+        th:nth-child(4) {
+            display:none;
+        }
+        
+        td:nth-child(5) {
+            display:none;
+        }
+        
     }
 }
 
