--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -115,7 +115,7 @@ a {
     align-items: center;
     height: 100%;
     width: 100%;
-    
+
 }
 
 .icon_profile {
@@ -323,6 +323,10 @@ nav {
     color: white;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
+
+    &:hover {
+        background-color: $secondary-color-hover;
+    }
 }
 
 .ms_button_delete {
@@ -341,6 +345,10 @@ nav {
     box-shadow: $shadow2;
     max-width: 50px;
     max-height: 50px;
+
+    &:hover {
+        background-color: $primary-color-hover;
+    }
 }
 
 .ms_button_login {
@@ -354,11 +362,16 @@ nav {
 
 .ms_button_secondary {
     border: 1px solid $primary-color;
+
     background-color: none;
     padding: 1rem;
     color: $primary-color;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
+
+    &:hover {
+        border: 2px solid $primary-color-hover;
+    }
 }
 
 // SHADOW
