--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -1,5 +1,8 @@
 $primary-color : #1B2533;
+$primary-color-hover : #0e131a;
+
 $secondary-color : #FF6827;
+$secondary-color-hover: #dc5a21;
 
 $primary-color-shade : #DFEAF8;
 $secondary-color-shade : #FFD0C0;
