--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -58,7 +58,10 @@ h1 {
     font-family: BlauerNue;
     font-variant: normal;
     font-weight: bolder;
+    
 }
+
+// FONT-SIZE
 
 h4 {
     font-family: BlauerNue;
@@ -89,7 +92,6 @@ label {
 
 .mt-auto {
     margin-top: auto;
-
 }
 
 a {
@@ -139,7 +141,7 @@ a {
 
 #logout {
     background-color: $secondary-color;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     color: white;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
@@ -226,6 +228,7 @@ nav {
 }
 
 
+
 // TABLES
 .ms_table {
     border-radius: 0.5rem;
@@ -234,6 +237,7 @@ nav {
     border-spacing: 0;
     width: 100%;
     box-shadow: $shadow;
+    text-overflow: ellipsis;
 
     thead {
         background-color: $primary-color;
@@ -244,6 +248,8 @@ nav {
             font-variant: normal;
             font-weight: bolder;
             padding: 10px;
+            text-overflow: ellipsis;
+            
         }
     }
 
@@ -265,6 +271,7 @@ nav {
 
         td {
             padding: 1rem;
+            text-overflow: ellipsis;
         }
     }
 }
@@ -317,8 +324,8 @@ nav {
 // BUTTONS
 .ms_button {
     background-color: $secondary-color;
-    padding: 1rem;
     color: white;
+    padding: 1rem;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
 }
