fix: create view button

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,7 +26,7 @@
     }
 }
 
-.border-gray{
+.border-gray {
     border: 0.5px solid rgb(194, 193, 193);
     border-radius: 10px;
     // padding: 5px;
@@ -39,7 +39,7 @@
 }
 
 
-.sm-text{
+.sm-text {
     font-size: 0.8rem;
 
 }
@@ -76,7 +76,7 @@ h1 {
     font-family: BlauerNue;
     font-variant: normal;
     font-weight: bolder;
-    
+
 }
 
 // FONT-SIZE
@@ -267,18 +267,18 @@ nav {
             font-weight: bolder;
             padding: 10px;
             text-overflow: ellipsis;
-            
+
         }
     }
 
     tbody {
-        
-        .overflow{
+
+        .overflow {
             overflow-y: scroll;
             max-height: 40px;
             border: 2px solid red;
         }
-        
+
         th {
             padding: 1rem;
             font-family: BlauerNue;
@@ -319,7 +319,7 @@ nav {
 .ms_bg {
     background-image: url("../../public/img/background_login.jpg");
     background-repeat: no-repeat;
-    background-attachment: fixed; 
+    background-attachment: fixed;
     background-size: 100% 100%;
 }
 
@@ -328,7 +328,7 @@ nav {
 }
 
 .vh-100 {
-    height:calc(100vh - 100px);
+    height: calc(100vh - 100px);
 }
 
 .ms_backC_tertiary {
@@ -364,6 +364,7 @@ nav {
     padding: 1rem;
     border-radius: 0.5rem;
     box-shadow: $shadow2;
+    cursor: pointer;
 
     &:hover {
         background-color: $secondary-color-hover;
