--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,6 +26,19 @@
     }
 }
 
+.border_premium{
+    box-shadow: rgb(255, 104, 39, 0.4) 0px 5px,  rgb(255, 104, 39, 0.3) 0px 10px, rgb(255, 104, 39, 0.2) 0px 15px, rgb(255, 104, 39, 0.1) 0px 20px, rgb(255, 104, 39, 0.05) 0px 25px !important;
+}
+
+.border_intermediate {
+    box-shadow: rgb(26, 36, 50, 0.4) 0px 5px,  rgb(26, 36, 50, 0.3) 0px 10px, rgb(26, 36, 50, 0.2) 0px 15px, rgb(26, 36, 50, 0.1) 0px 20px, rgb(26, 36, 50, 0.05) 0px 25px !important;
+}
+
+.border_basic {
+    box-shadow: rgb(223, 234, 248, 0.4) 0px 5px,  rgb(223, 234, 248, 0.3) 0px 10px, rgb(223, 234, 248, 0.2) 0px 15px, rgb(223, 234, 248, 0.1) 0px 20px, rgb(223, 234, 248, 0.05) 0px 25px !important;
+}
+
+
 .border-gray {
     border: 0.5px solid rgb(194, 193, 193);
     border-radius: 10px;
